--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ social-auth-core = "^4.3.0"
 sqlparse = "^0.4.3"
 tomli = "^2.0.1"
 uritemplate = "^4.1.1"
+drf-spectacular = "^0.25.1"
 
 
 [build-system]
